[package]
name = "ckb-growth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
ckb-chain = { version = "= 0.101.7" }
ckb-types = { version = "= 0.101.7" }
ckb-shared = { version = "= 0.101.7" }
ckb-store = { version = "= 0.101.7" }
ckb-chain-spec = { version = "= 0.101.7" }
ckb-hash = { version = "= 0.101.7" }
ckb-pow = "0.101.7"
ckb-dao-utils = { version = "= 0.101.7" }
ckb-dao = { version = "= 0.101.7" }
ckb-system-scripts = { version = "= 0.5.4" }
ckb-crypto = { version = "= 0.101.7" }
ckb-jsonrpc-types = { version = "= 0.101.7" }
ckb-verification = { version = "= 0.101.7" }
ckb-verification-traits = { version = "= 0.101.7" }
ckb-app-config = { version = "= 0.101.7" }
ckb-resource = { version = "= 0.101.7" }
ckb-network = { version = "= 0.101.7" }
ckb-launcher = { version = "= 0.101.7" }
ckb-logger-config = "0.101.7"
ckb-logger = "0.101.7"
ckb-logger-service = "0.101.7"
ckb-error = "0.101.7"
ckb-async-runtime = "0.101.7"
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.3.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
rand = "0.7"
serde_json = "1.0"
toml = "0.5.0"
nix = "0.20.0"
jsonrpc-core = "18.0"