[package]
name = "ckb-growth"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB growth estimate"
#homepage = "https://github.com/nervosnetwork/ckb"
#repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-chain = { version = "= 0.101.7" }
ckb-types = { version = "= 0.101.7" }
ckb-shared = { version = "= 0.101.7" }
ckb-store = { version = "= 0.101.7" }
ckb-chain-spec = { version = "= 0.101.7" }
ckb-hash = { version = "= 0.101.7"}
ckb-pow = "0.101.7"
#ckb-test-chain-utils = { version = "= 0.101.7" }
ckb-dao-utils = { version = "= 0.101.7" }
ckb-dao = { version = "= 0.101.7" }
ckb-system-scripts = { version = "= 0.5.4" }
ckb-crypto = { version = "= 0.101.7" }
ckb-jsonrpc-types = { version = "= 0.101.7" }
ckb-verification = { version = "= 0.101.7" }
ckb-verification-traits = { version = "= 0.101.7" }
ckb-app-config = { version = "= 0.101.7" }
ckb-resource = { version = "= 0.101.7" }
ckb-network = { version = "= 0.101.7" }
ckb-launcher = { version = "= 0.101.7" }
ckb-logger-config = "0.101.7"
ckb-logger-service = "0.101.7"
ckb-async-runtime = "0.101.7"
clap = { version = "3.1.6" , features = ["derive"] }
lazy_static = "1.3.0"
rand = "0.7"
tempfile = "3.3.0"
