[package]
name = "growth-profiling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.103.0"
clap = { version = "3.1.6", features = ["derive"] }
rand = "0.7"
growth-utils = { path = "../utils" }
