[package]
name = "growth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.103.0"
ckb-logger = "0.103.0"
ckb-logger-service = "0.103.0"
ckb-logger-config = "0.103.0"
ckb-jsonrpc-types = "0.103.0"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"
growth-utils = { path = "../utils"}