[package]
name = "growth-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-types = "0.103.0"
ckb-chain-spec = "0.103.0"
ckb-hash  = "0.103.0"
ckb-system-scripts = "0.5.4"
ckb-crypto = "0.103.0"
ckb-jsonrpc-types = "0.103.0"
ckb-app-config = "0.103.0"
ckb-resource  = "0.103.0"
ckb-network  = "0.103.0"
ckb-logger = "0.103.0"
ckb-error = "0.103.0"
lazy_static = "1.3.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "0.5.0"
nix = "0.20.0"
jsonrpc-core = "18.0"
